# DC-BOT

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  docker-compose.yml  railway.toml  video_page.html
migrations/: 001_initial.sql  002_upgrade.sql  003_nsfw_and_rule34.sql  003_nsfw_channel.sql  004_jav_channel.sql  005_porn_videos.sql  006_okxxx_channel.sql  007_blocked_users.sql  008_coc_channel.sql  009_twitter_channel.sql  010_twitter_split.sql  011_dmc_channel.sql
src/: config.rs  data.rs  main.rs  web.rs
src/coc/: fetcher.rs  mod.rs  models.rs  task.rs
src/commands/: admin.rs  checks.rs  config.rs  help.rs  memes.rs  mod.rs  ping.rs  post.rs  settings.rs  setup.rs  status.rs  unset.rs
src/db/: queries.rs  schema.rs
src/dmc/: calculator.rs  gemini.rs  mod.rs
src/events/: message.rs
src/freegames/: aggregator.rs  epic.rs  gamerpower.rs  mod.rs  models.rs  task.rs
src/jav/: client.rs  models.rs  task.rs
src/news/: fetcher.rs  models.rs  task.rs
src/okxxx/: client.rs  models.rs  task.rs
src/porn/: client.rs  models.rs  task.rs
src/reddit/: client.rs  models.rs  task.rs
src/twitter/: client.rs  mod.rs  models.rs  task.rs  translate.rs
src/web/: player.html
